Revamp preferences dialog.
More extensible design, hopefully will facilitate adding more options.
Add options to disable stats reporting by type (cpu, mem, disk, net), but
don't hook them up yet.

--- a/src/virt-manager.schemas.in
+++ b/src/virt-manager.schemas.in
@@ -118,6 +118,58 @@
     </schema>
 
     <schema>
+      <key>/schemas/apps/::PACKAGE::/stats/enable-disk-poll</key>
+      <applyto>/apps/::PACKAGE::/stats/enable-disk-poll</applyto>
+      <owner>::PACKAGE::</owner>
+      <type>bool</type>
+      <default>0</default>
+
+      <locale name="C">
+        <short>Poll disk i/o stats</short>
+        <long>Whether or not the app will poll VM disk i/o statistics</long>
+      </locale>
+    </schema>
+
+    <schema>
+      <key>/schemas/apps/::PACKAGE::/stats/enable-net-poll</key>
+      <applyto>/apps/::PACKAGE::/stats/enable-net-poll</applyto>
+      <owner>::PACKAGE::</owner>
+      <type>bool</type>
+      <default>0</default>
+
+      <locale name="C">
+        <short>Poll net i/o stats</short>
+        <long>Whether or not the app will poll VM network i/o statistics</long>
+      </locale>
+    </schema>
+
+    <schema>
+      <key>/schemas/apps/::PACKAGE::/stats/enable-mem-poll</key>
+      <applyto>/apps/::PACKAGE::/stats/enable-mem-poll</applyto>
+      <owner>::PACKAGE::</owner>
+      <type>bool</type>
+      <default>1</default>
+
+      <locale name="C">
+        <short>Poll memory usage stats</short>
+        <long>Whether or not the app will poll connection and VM memory usage statistics</long>
+      </locale>
+    </schema>
+
+    <schema>
+      <key>/schemas/apps/::PACKAGE::/stats/enable-cpu-poll</key>
+      <applyto>/apps/::PACKAGE::/stats/enable-cpu-poll</applyto>
+      <owner>::PACKAGE::</owner>
+      <type>bool</type>
+      <default>1</default>
+
+      <locale name="C">
+        <short>Poll cpu stats</short>
+        <long>Whether or not the app will poll connection and VM cpu usage statistics</long>
+      </locale>
+    </schema>
+
+    <schema>
       <key>/schemas/apps/::PACKAGE::/urls/url-list-length</key>
       <applyto>/apps/::PACKAGE::/urls/url-list-length</applyto>
       <owner>::PACKAGE::</owner>
