Make default URI determination a bit more robust.

--- a/src/virt-manager.py.in
+++ b/src/virt-manager.py.in
@@ -186,6 +186,17 @@ def parse_commandline():
 
     return optParser.parse_args()
 
+def default_uri():
+    tryuri = None
+    if os.path.exists("/var/lib/xend") and os.path.exists("/proc/xen"):
+        tryuri = "xen:///"
+    elif (os.path.exists("/usr/bin/qemu") or
+          os.path.exists("/usr/bin/qemu-kvm") or
+          os.path.exists("/usr/bin/kvm")):
+        tryuri = "qemu:///system"
+
+    return tryuri
+
 def launch_specific_window(engine, show, uri, uuid):
     if not engine.wait_for_open(uri):
         # Connection failed, don't attempt to continue
@@ -215,11 +226,8 @@ def show_engine(engine, show, uri, uuid, no_conn_auto):
     else:
         if engine.config.get_connections() is None \
            or len(engine.config.get_connections()) == 0:
-            tryuri = None
-            if os.path.exists("/var/lib/xend") and os.path.exists("/proc/xen"):
-                tryuri = "xen:///"
-            elif os.path.exists("/usr/bin/qemu"):
-                tryuri = "qemu:///system"
+
+            tryuri = default_uri()
             if tryuri is not None:
                 engine.add_connection(tryuri, autoconnect=True)
         engine.show_manager()
