Packages the tests directory with 'make dist'

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,6 @@
 ACLOCAL_AMFLAGS = -I m4/
 
-SUBDIRS = src pixmaps man po help
+SUBDIRS = src pixmaps man po help tests
 
 EXTRA_DIST = @PACKAGE@.spec COPYING-DOCS xmldocs.make omf.make \
 	intltool-extract.in intltool-merge.in intltool-update.in
