--- a/Makefile.am
+++ b/Makefile.am
@@ -1,9 +1,9 @@
 ACLOCAL_AMFLAGS = -I m4/
 
-SUBDIRS = src pixmaps man po help tests
+SUBDIRS = src pixmaps man po help
 
 EXTRA_DIST = @PACKAGE@.spec COPYING-DOCS xmldocs.make omf.make \
-	intltool-extract.in intltool-merge.in intltool-update.in
+	intltool-extract.in intltool-merge.in intltool-update.in tests
 
 DISTCLEAN_FILES = @PACKAGE@.spec intltool-extract intltool-merge intltool-update
 
