--- a/.hgignore
+++ b/.hgignore
@@ -17,6 +17,14 @@ Makefile\.in$
 ^libtool
 ^intltool-.*\.in$
 ^m4/.*\.m4$
+intltool-update
+intltool-merge
+intltool-extract
+help/virt-manager/C/omf_timestamp
+man/virt-manager.1
+po/POTFILES
+po/.intltool-merge-cache
+po/stamp-it
 po/Makefile\.in\.in
 po/Rules-quot
 po/boldquot\.sed
@@ -25,3 +33,20 @@ po/en@quot\.header
 po/insert-header\.sin
 po/quot\.sed
 po/remove-potcdate\.sin
+^po/.*\.gmo
+src/graphWidgets/pysparklinemodule.c
+src/graphWidgets/pysparklinemodule.defs
+^.*\.o
+^.*\.lo
+^.*\.Plo
+^.*\.la
+^.*\.so
+^.*\.a
+^.*\.swp
+Makefile
+src/virt-manager
+src/virt-manager.desktop
+src/virt-manager.py
+src/virt-manager.service
+src/virt-manager.schemas
+virt-manager.spec
