Don't show startup error for SystemExit (used by --help).

--- a/src/virt-manager.py.in
+++ b/src/virt-manager.py.in
@@ -374,6 +374,8 @@ if __name__ == "__main__":
         main()
     except KeyboardInterrupt:
         logging.debug("Received KeyboardInterrupt. Exiting application.")
+    except SystemExit:
+        raise
     except Exception, run_e:
         logging.exception(run_e)
         _show_startup_error(str(run_e), "".join(traceback.format_exc()))
