Remove graphwidgets written in 'C'. We are now 100% python!

--- a/Makefile.am
+++ b/Makefile.am
@@ -10,5 +10,8 @@ DISTCLEAN_FILES = @PACKAGE@.spec intltool-extract intltool-merge intltool-update
 rpm: clean
 	$(MAKE) dist && rpmbuild -ta $(distdir).tar.gz
 
+srpm: clean
+	$(MAKE) dist && rpmbuild -ts $(distdir).tar.gz
+
 check-pylint:
 	tests/pylint-virt-manager.sh
