Refresh PO, touch up specfile.

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,12 +1,14 @@
 src/virt-manager.desktop.in.in
 src/virt-manager.py.in
 src/virt-manager.schemas.in
+
 src/virtManager/IPy.py
 src/virtManager/__init__.py
 src/virtManager/about.py
 src/virtManager/addhardware.py
 src/virtManager/asyncjob.py
 src/virtManager/choosecd.py
+src/virtManager/clone.py
 src/virtManager/config.py
 src/virtManager/connect.py
 src/virtManager/connection.py
@@ -15,33 +17,42 @@ src/virtManager/createmeter.py
 src/virtManager/createnet.py
 src/virtManager/createpool.py
 src/virtManager/createvol.py
+src/virtManager/delete.py
 src/virtManager/details.py
 src/virtManager/domain.py
 src/virtManager/engine.py
 src/virtManager/error.py
+src/virtManager/graphwidgets.py
 src/virtManager/host.py
 src/virtManager/keyring.py
 src/virtManager/manager.py
 src/virtManager/netdev.py
+src/virtManager/netdevhelper.py
 src/virtManager/network.py
 src/virtManager/opticalhelper.py
 src/virtManager/preferences.py
 src/virtManager/remote.py
 src/virtManager/secret.py
 src/virtManager/serialcon.py
+src/virtManager/storagebrowse.py
 src/virtManager/storagepool.py
 src/virtManager/storagevol.py
+src/virtManager/systray.py
 src/virtManager/util.py
+
 src/vmm-about.glade
 src/vmm-add-hardware.glade
 src/vmm-choose-cd.glade
+src/vmm-clone.glade
 src/vmm-create-net.glade
 src/vmm-create-pool.glade
 src/vmm-create-vol.glade
 src/vmm-create.glade
+src/vmm-delete.glade
 src/vmm-details.glade
 src/vmm-host.glade
 src/vmm-manager.glade
 src/vmm-open-connection.glade
 src/vmm-preferences.glade
 src/vmm-progress.glade
+src/vmm-storage-browse.glade
