--- a/virt-manager.spec.in
+++ b/virt-manager.spec.in
@@ -26,8 +26,9 @@ Requires: gnome-python2
 %else
 Requires: gnome-python2-gnome
 %endif
-# Absolutely require this version or newer
-Requires: libvirt-python >= 0.4.5
+# This version not strictly required: virt-manager should work with older,
+# however varying amounts of functionality will not be enabled.
+Requires: libvirt-python >= 0.7.0
 # Definitely does not work with earlier due to python API changes
 Requires: dbus-python >= 0.61
 Requires: dbus-x11
@@ -41,8 +42,8 @@ Requires: gnome-python2-gnomekeyring >= 2.15.4
 Requires: gnome-python2-gnomevfs >= 2.15.4
 # Minimum we've tested with
 Requires: libxml2-python >= 2.6.23
-# Required to install Xen & QEMU guests
-Requires: python-virtinst >= 0.400.1
+# Absolutely require this version or later
+Requires: python-virtinst >= 0.500.0
 # Required for loading the glade UI
 Requires: pygtk2-libglade
 # Required for our graphics which are currently SVG format
@@ -151,6 +152,24 @@ fi
 %{_datadir}/dbus-1/services/%{name}.service
 
 %changelog
+* Tue Jul 28 2009 Cole Robinson <crobinso@redhat.com> - 0.8.0-1
+- New 'Clone VM' Wizard
+- Improved UI, including an overhaul of the main 'manager' view
+- System tray icon for easy VM access (start, stop, view console/details)
+- Wizard for adding serial, parallel, and video devices to existing VMs.
+
+* Mon Mar  9 2009 Cole Robinson <crobinso@redhat.com> - 0.7.0-1
+- Redesigned 'New Virtual Machine' wizard (Jeremy Perry, Cole Robinson)
+- Option to remove storage when deleting a virtual machine.
+- File browser for libvirt storage pools and volumes
+- Physical device assignment (PCI, USB) for existing virtual machines.
+
+* Mon Jan 26 2009 Cole Robinson <crobinso@redhat.com> - 0.6.1-1
+- VM disk and network stats reporting (Guido Gunther)
+- VM Migration support (Shigeki Sakamoto)
+- Support for adding sound devices to an existing VM
+- Enumerate host devices attached to an existing VM
+
 * Wed Sep 10 2008 Cole Robinson <crobinso@redhat.com> - 0.6.0-1
 - Add libvirt storage management support
 - Basic support for remote guest installation
