--- a/src/virt-manager.py.in
+++ b/src/virt-manager.py.in
@@ -300,6 +300,10 @@ def main():
     dbus.glib.threads_init()
     import dbus.service
 
+    # Set program name for gnome shell
+    if hasattr(gobject, "set_prgname"):
+        gobject.set_prgname(appname)
+
     # Specifically init config/gconf before the fork, so that pam
     # doesn't think we closed the app, therefor robbing us of
     # display access
