Add --version cli command.

--- a/src/virt-manager.py.in
+++ b/src/virt-manager.py.in
@@ -164,7 +164,7 @@ def setup_logging(debug_stdout):
     sys.excepthook = exception_log
 
 def parse_commandline():
-    optParser = OptionParser()
+    optParser = OptionParser(version=appversion)
     optParser.add_option("--profile", dest="profile", help="Generate runtime performance profile stats", metavar="FILE")
     optParser.set_defaults(uuid=None)
     optParser.add_option("-c", "--connect", dest="uri",
