--- a/src/virt-manager.py.in
+++ b/src/virt-manager.py.in
@@ -39,6 +39,8 @@ appname = "::PACKAGE::"
 appversion = "::VERSION::"
 gettext_app = "virt-manager"
 gettext_dir = "::GETTEXTDIR::"
+virtinst_str = "::VIRTINST_VERSION::"
+virtinst_version = tuple([ int(num) for num in virtinst_str.split('.')])
 
 gconf_dir = "/apps/" + appname
 asset_dir = "::ASSETDIR::"
@@ -288,6 +290,23 @@ def main():
         # Damned if we do, damned if we dont :-)(
         raise RuntimeError(_("Unable to initialize GTK: %s") % str(e))
     warnings.resetwarnings()
+
+    # Make sure we have a sufficiently new virtinst version, since we are
+    # very closely tied to the lib
+    msg = ("virt-manager requires the python-virtinst library version " +
+            virtinst_str + " or greater. This can be downloaded at:"
+            "\n\nhttp://virt-manager.org/download.html")
+    try:
+        import virtinst
+        ignore = virtinst.__version__
+        ignore = virtinst.__version_info__
+    except Exception, e:
+        raise RuntimeError(str(e) + "\n\n" + msg)
+
+    if virtinst.__version_info__ < virtinst_version:
+        raise RuntimeError("virtinst version %s is too old." %
+                            (virtinst.__version__) +
+                           "\n\n" + msg)
 
     # Add our icon dir to icon theme
     icon_theme = gtk.icon_theme_get_default()
