details: Confirm with user before removing a device
Allow this removal to be skipped using a similar 'Don't show this again'
option as the previous commit.

--- a/src/virt-manager.schemas.in
+++ b/src/virt-manager.schemas.in
@@ -311,5 +311,18 @@
         <long>Whether we require confirmation to pause a VM</long>
       </locale>
     </schema>
+
+    <schema>
+      <key>/schemas/apps/::PACKAGE::/confirm/removedev</key>
+      <applyto>/apps/::PACKAGE::/confirm/removedev</applyto>
+      <owner>::PACKAGE::</owner>
+      <type>bool</type>
+      <default>1</default>
+
+      <locale name="C">
+        <short>Confirm device removal request</short>
+        <long>Whether we require confirmation to remove a virtual device</long>
+      </locale>
+    </schema>
   </schemalist>
 </gconfschemafile>
