Fix 'make check'

--- a/.hgignore
+++ b/.hgignore
@@ -47,4 +47,5 @@ src/virt-manager.desktop
 src/virt-manager.py
 src/virt-manager.service
 src/virt-manager.schemas
+src/virtManager/.tstamp.*
 virt-manager.spec
