--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -12,6 +12,7 @@ src/virtManager/clone.py
 src/virtManager/config.py
 src/virtManager/connect.py
 src/virtManager/connection.py
+src/virtManager/console.py
 src/virtManager/create.py
 src/virtManager/createmeter.py
 src/virtManager/createnet.py
@@ -26,6 +27,7 @@ src/virtManager/graphwidgets.py
 src/virtManager/host.py
 src/virtManager/keyring.py
 src/virtManager/manager.py
+src/virtManager/migrate.py
 src/virtManager/netdev.py
 src/virtManager/netdevhelper.py
 src/virtManager/network.py
@@ -38,6 +40,7 @@ src/virtManager/storagebrowse.py
 src/virtManager/storagepool.py
 src/virtManager/storagevol.py
 src/virtManager/systray.py
+src/virtManager/uihelpers.py
 src/virtManager/util.py
 
 src/vmm-about.glade
@@ -52,6 +55,7 @@ src/vmm-delete.glade
 src/vmm-details.glade
 src/vmm-host.glade
 src/vmm-manager.glade
+src/vmm-migrate.glade
 src/vmm-open-connection.glade
 src/vmm-preferences.glade
 src/vmm-progress.glade
