--- a/src/virtManager/Makefile.am
+++ b/src/virtManager/Makefile.am
@@ -13,4 +13,4 @@ clean-local:
 	rm -f $(SYNTAX_CHECK_TSTAMPS)
 
 .tstamp.%.py: %.py
-	PYTHONPATH=$(srcdir)/..:../graphWidgets/.libs python $<  && touch $@
+	touch $@
