Add new class vmmMediaDev, similar to vmmNetDev
Represents a physical media drive on the host (only cdrom for now, but could
be floppy later). Use this in opticalhelper

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -27,6 +27,7 @@ src/virtManager/graphwidgets.py
 src/virtManager/host.py
 src/virtManager/keyring.py
 src/virtManager/manager.py
+src/virtManager/mediadev.py
 src/virtManager/migrate.py
 src/virtManager/netdev.py
 src/virtManager/netdevhelper.py
