Prep for release (Update NEWS, translations, configure...)

--- a/virt-manager.spec.in
+++ b/virt-manager.spec.in
@@ -37,7 +37,7 @@ Requires: gnome-python2-gnomekeyring >= 2.15.4
 # Minimum we've tested with
 Requires: libxml2-python >= 2.6.23
 # Absolutely require this version or later
-Requires: python-virtinst >= 0.500.0
+Requires: python-virtinst >= @VIRTINST_VERSION@
 # Required for loading the glade UI
 Requires: pygtk2-libglade
 # Required for our graphics which are currently SVG format
