Don't show 'perl' in man page

--- a/man/Makefile.am
+++ b/man/Makefile.am
@@ -4,6 +4,6 @@ man_MANS = virt-manager.1
 EXTRA_DIST = virt-manager.pod
 
 %.1: %.pod
-	pod2man --center="Virtual Machine Manager" $< > $@
+	pod2man --release="" --center="Virtual Machine Manager" $< > $@
 
 CLEANFILES = virt-manager.1
