Make sure a default '_' implementation is always available
If things error out sufficiently earlier, '_' wouldn't have been installed
in the builtin namespace, so we will trigger an when trying to show a
translated error dialog.

--- a/src/virt-manager.py.in
+++ b/src/virt-manager.py.in
@@ -34,6 +34,13 @@ import traceback
 import signal
 from optparse import OptionParser, OptionValueError
 
+try:
+    # Make sure we have a default '_' implementation, in case something
+    # fails before gettext is set up
+    __builtins__._ = lambda msg: msg
+except:
+    pass
+
 # These are substituted into code based on --prefix given to configure
 appname = "::PACKAGE::"
 appversion = "::VERSION::"
