Add libvirt interface create wizard.

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -14,6 +14,7 @@ src/virtManager/connect.py
 src/virtManager/connection.py
 src/virtManager/console.py
 src/virtManager/create.py
+src/virtManager/createinterface.py
 src/virtManager/createmeter.py
 src/virtManager/createnet.py
 src/virtManager/createpool.py
@@ -47,6 +48,7 @@ src/vmm-about.glade
 src/vmm-add-hardware.glade
 src/vmm-choose-cd.glade
 src/vmm-clone.glade
+src/vmm-create-interface.glade
 src/vmm-create-net.glade
 src/vmm-create-pool.glade
 src/vmm-create-vol.glade
