Fix 'tests' install to not end up in RPM

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -1,4 +1,2 @@
-testsdir = $(pkgdatadir)/tests
-tests_DATA = $(wildcard $(srcdir)/*.sh)
 
-EXTRA_DIST = $(tests_DATA)
+EXTRA_DIST = $(wildcard *.sh)
