--- a/src/virt-manager.py.in
+++ b/src/virt-manager.py.in
@@ -356,14 +356,18 @@ def main():
     from virtManager.engine import vmmEngine
     from virtManager.remote import vmmRemote
 
-    gtk.window_set_default_icon_from_file(icon_dir + "/" + appname + "-icon.svg")
+    gtk.window_set_default_icon_from_file(icon_dir + "/" +
+                                          appname + "-icon.svg")
 
     if options.show and options.uri==None:
         raise OptionValueError("can't use --show-* options without --connect")
 
     engine = vmmEngine(config)
 
-    if not(options.nodbus) and not( (os.getenv("DBUS_SESSION_BUS_ADDRESS") is None ) and ( os.getenv("DBUS_STARTER_ADDRESS") is None ) ):
+    if (not (options.nodbus) and
+        not ((os.getenv("DBUS_SESSION_BUS_ADDRESS") is None) and
+             (os.getenv("DBUS_STARTER_ADDRESS") is None))):
+
         try:
             bus = None
             if os.getenv("DBUS_STARTER_ADDRESS") is None:
@@ -371,26 +375,35 @@ def main():
             else:
                 bus = dbus.StarterBus()
 
-            dbusProxy = bus.get_object("org.freedesktop.DBus", "/org/freedesktop/DBus")
+            dbusProxy = bus.get_object("org.freedesktop.DBus",
+                                       "/org/freedesktop/DBus")
             dbusObj = dbus.Interface(dbusProxy, "org.freedesktop.DBus")
 
             if dbusObj.NameHasOwner("com.redhat.virt.manager"):
                 # We're already running, so just talk to existing process
-                managerProxy = bus.get_object("com.redhat.virt.manager", "/com/redhat/virt/manager")
-                managerObj = dbus.Interface(managerProxy, "com.redhat.virt.manager")
 
-                show_remote(managerObj, options.show, options.uri, options.uuid)
+                managerProxy = bus.get_object("com.redhat.virt.manager",
+                                              "/com/redhat/virt/manager")
+                managerObj = dbus.Interface(managerProxy,
+                                            "com.redhat.virt.manager")
+
+                show_remote(managerObj, options.show,
+                            options.uri, options.uuid)
 
                 # yes, we exit completely now - remote service is in charge
                 return
+
             else:
                 # Grab the service to allow others to talk to us later
                 name = dbus.service.BusName("com.redhat.virt.manager", bus=bus)
                 vmmRemote(engine, name)
+
         except:
             # Something went wrong doing dbus setup, just ignore & carry on
-            logging.warning("Could not get connection to session bus, disabling DBus service " + \
-                            str(sys.exc_info()[0]) + " " + str(sys.exc_info()[1]))
+            logging.warning("Could not get connection to session bus, "
+                            "disabling DBus service " +
+                            str(sys.exc_info()[0]) + " " +
+                            str(sys.exc_info()[1]))
 
     # At this point we're either starting a brand new controlling instance,
     # or the dbus comms to existing instance has failed
