--- a/virt-manager.spec.in
+++ b/virt-manager.spec.in
@@ -135,6 +135,11 @@ fi
 %{_datadir}/%{name}/pixmaps/*.png
 %{_datadir}/%{name}/pixmaps/*.svg
 
+%dir %{_datadir}/%{name}/pixmaps/hicolor/
+%dir %{_datadir}/%{name}/pixmaps/hicolor/*/
+%dir %{_datadir}/%{name}/pixmaps/hicolor/*/*/
+%dir %{_datadir}/%{name}/pixmaps/hicolor/*/*/*.png
+
 %dir %{_datadir}/%{name}/virtManager/
 
 %{_datadir}/%{name}/virtManager/*.py*
